.opsera-medical-center/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-medical-center-dev
  labels:
    tenant: opsera
    app: medical-center
    environment: dev
