.opsera-medical-center/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-center-api
  labels:
    app: medical-center-api
    tenant: opsera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medical-center-api
  template:
    metadata:
      labels:
        app: medical-center-api
        tenant: opsera
    spec:
      containers:
        - name: api
          image: 792373136340.dkr.ecr.us-west-2.amazonaws.com/medical-center-api:5dcd4e9-30758874437
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
