.opsera-medical-center/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-center-frontend
  labels:
    app: medical-center-frontend
    tenant: opsera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medical-center-frontend
  template:
    metadata:
      labels:
        app: medical-center-frontend
        tenant: opsera
    spec:
      containers:
        - name: frontend
          image: 792373136340.dkr.ecr.us-west-2.amazonaws.com/medical-center-frontend:5dcd4e9-30758874437
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
          startupProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 30
      volumes:
        - name: nginx-config
          configMap:
            name: medical-center-frontend-nginx
