.opsera-medical-center/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medical-center-api
  labels:
    app: medical-center-api
    tenant: opsera
spec:
  selector:
    app: medical-center-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
