.opsera-medical-center/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medical-center-frontend
  labels:
    app: medical-center-frontend
    tenant: opsera
spec:
  selector:
    app: medical-center-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
