.opsera-medical-center/k8s/sqlserver-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-center-sqlserver
  namespace: opsera-medical-center-dev
  labels:
    app: medical-center-sqlserver
    tenant: opsera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medical-center-sqlserver
  template:
    metadata:
      labels:
        app: medical-center-sqlserver
        tenant: opsera
    spec:
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          resources:
            requests:
              memory: 2Gi
            limits:
              memory: 2Gi
          readinessProbe:
            tcpSocket:
              port: 1433
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 1433
            initialDelaySeconds: 60
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: medical-center-sqlserver
  namespace: opsera-medical-center-dev
  labels:
    app: medical-center-sqlserver
    tenant: opsera
spec:
  selector:
    app: medical-center-sqlserver
  ports:
    - name: mssql
      port: 1433
      targetPort: 1433
