.opsera-medical-center/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medical-center-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: medical-center
    tenant: opsera
spec:
  ingressClassName: nginx
  rules:
    - host: medical-center-yarp-dev.agent.opsera.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: medical-center-yarp
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medical-center-frontend
                port:
                  number: 80
